# duplexpic

./: .gitignore  CONTEXT.md  README.md  package-lock.json  package.json  vite.config.js
.atl/: skill-registry.md
openspec/: config.yaml  tech-debt.md
openspec/changes/archive/2026-06-06-rust-pixel-transforms/: ARCHIVE.md  design.md  proposal.md  spec.md  tasks.md
openspec/changes/archive/2026-06-07-rust-print-composition/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-ui-redesign-sidebar/: tasks.md
openspec/changes/duplexpic-image-controls/: archive-report.md  design.md  proposal.yaml  spec.md  tasks.md  verify-report.md
openspec/changes/duplexpic-initial-setup/: archive-report.md  design.md  proposal.yaml  spec.md  tasks.md  verify-report.md
openspec/changes/duplexpic-polish/: archive-report.md  design.md  proposal.yaml  spec.md  tasks.md  verify-report.md
openspec/changes/ui-redesign-sidebar/: tasks.md
openspec/decisions/: mirror-dual-approach.md
openspec/specs/: ux-requirements.md
openspec/specs/print/: spec.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/print/: composition.rs  error.rs  mod.rs  pdf.rs
src/modules/: canvas.js  controls.js  fileLoader.js  notification.js  properties.js  sidebar.js  state.js  zoom.js
