[package]
name = "duplexpic"
version = "1.0.0"
edition = "2021"

[lib]
name = "duplexpic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
printpdf = { version = "0.9", features = ["images"] }
tauri-plugin-prevent-default = { version = "2", features = ["unstable-windows"] }
